# soon

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  pyproject.toml
.github/workflows/: publish-aur.yml  publish-crates.yml  publish-pypi.yml
scripts/: check.sh  test.sh
src/: cache.rs  cli.rs  config.rs  main.rs  predict.rs
src/commands/: config.rs  learn.rs  mod.rs  now.rs  stats.rs  update.rs  which.rs
src/learn/: db.rs  llm.rs  markov.rs  mod.rs  pattern.rs  trigram.rs
src/shell/: bash.rs  elvish.rs  fish.rs  mod.rs  nushell.rs  powershell.rs  tcsh.rs  zsh.rs
