[package]
name = "soon"
version = "0.2.0"
edition = "2021"
description = "Predict your next shell command based on history — like shell autocomplete, but MORE stupid"
license = "MIT"
repository = "https://github.com/HsiangNianian/soon"
authors = ["HsiangNianian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "soon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
counter = "0.6.0"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
ureq = "3"
chrono = { version = "0.4", features = ["serde"] }
